--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-simple-maps": "^2.3.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "git push heroku master"
   },
   "eslintConfig": {
     "extends": [
